fix styles on ios

--- a/src/App.scss
+++ b/src/App.scss
@@ -191,6 +191,7 @@
                     margin: 10px;
                     max-width: 50px;
                     // remove arrow
+                    background-color: #3b3b3b;
                     -webkit-appearance: none;
                     -moz-appearance: none;
                     text-indent: 1px;
